--- a/src/components/login/loginUsuarioSenha.css
+++ b/src/components/login/loginUsuarioSenha.css
@@ -1,11 +1,9 @@
 .spanTitle {
   width: 100%;
-  text-align: justify;
-  font-size: 15px;
-  font-weight: bold;
-  color: black;
-  margin-left: 40px;
-  line-height: 1.8;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold italic;
+  color: darkblue;
 }
 
 .divLinha {
@@ -14,17 +12,18 @@
 
 .spanSubTitle {
   font-size: 12px;
-  line-height: 14px;
+  line-height: 10px;
   letter-spacing: 0.15em;
   text-transform: uppercase;
   color: black;
 }
 
-.divPanelInformacao {
+.divPanelLoginSenha {
   width: 350px;
   border: 1px solid black ;
   border-radius: 5px;
   margin-top: 10px;
   margin-left: 10px;
   padding: 5px;
+  background-color: lightsteelblue;
 }
